--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  a {
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+  }
+
+  .component-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 }
 
 code {
