--- a/src/components/Login/styles.module.scss
+++ b/src/components/Login/styles.module.scss
@@ -1,3 +1,32 @@
-.main {
-  color: blue;
+form {
+  outline: 1px dotted blue;
+  display: flex;
+  flex-direction: column;
+
+  > div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2em;
+  }
+
+  label {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+label {
+  > span {
+    margin-bottom: 0.5em;
+  }
+
+  > .field-label {
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  
+  > .field-hint {
+    font-size: smaller;
+    font-style: italic;
+  }
 }
